--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -5,7 +5,8 @@ PATCHLEVEL = 10
 SUBLEVEL =
 EXTRAVERSION =
 NAME =
-
+ARCH        ?= arm
+CROSS_COMPILE    ?= arm-linux-gnueabihf-
 # *DOCUMENTATION*
 # To see a list of typical targets execute "make help"
 # More info can be located in ./README
