[kernel] Set led label on dts

--- a/kernel/arch/arm/boot/dts/sun8i-h3-wukongpi.dts
+++ b/kernel/arch/arm/boot/dts/sun8i-h3-wukongpi.dts
@@ -75,14 +75,16 @@
 		compatible = "gpio-leds";
 
 		pwr_led {
-			label = "orangepi:green:pwr";
+			label = "green_led";
 			gpios = <&r_pio 0 10 GPIO_ACTIVE_HIGH>;
 			default-state = "on";
 		};
 
 		status_led {
-			label = "orangepi:red:status";
-			gpios = <&pio 0 15 GPIO_ACTIVE_HIGH>;
+			label = "red_led";
+			gpios = <&pio 0 17 GPIO_ACTIVE_HIGH>;
+			default-state = "on";
+			linux,default-trigger = "heartbeat";
 		};
 	};
 
