[uboot] change uboot log to uart1

--- a/u-boot/configs/wukongpi_defconfig
+++ b/u-boot/configs/wukongpi_defconfig
@@ -18,3 +18,4 @@ CONFIG_USE_BOOTARGS=y
 CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTARGS="console=ttyS0,115200 panic=5 rootwait root=/dev/mmcblk0p2 earlyprintk rw"
 CONFIG_BOOTCOMMAND="load mmc 0:1 0x42000000 zImage; load mmc 0:1 0x43000000 sun8i-h3-wukongpi.dtb; bootz 0x42000000 - 0x43000000"
+CONFIG_CONS_INDEX=2
