--- a/u-boot/arch/arm/dts/sun8i-h2-plus-orangepi-zero.dts
+++ b/u-boot/arch/arm/dts/sun8i-h2-plus-orangepi-zero.dts
@@ -55,7 +55,7 @@
 	compatible = "xunlong,orangepi-zero", "allwinner,sun8i-h2-plus";
 
 	aliases {
-		serial0 = &uart0;
+		serial0 = &uart1;
 		/* ethernet0 is the H3 emac, defined in sun8i-h3.dtsi */
 		ethernet0 = &emac;
 		ethernet1 = &xr819;
@@ -192,7 +192,7 @@
 &uart1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart1_pins>;
-	status = "disabled";
+	status = "okay";
 };
 
 &uart2 {
