Revert "[kernel] Support framebuffer set rotation"
This reverts commit ac1e520f386c6b2419ce5801d7110b3a8e520eeb.

--- a/kernel/.config
+++ b/kernel/.config
@@ -2407,8 +2407,8 @@ CONFIG_HDMI=y
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
-CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
-CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
+# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
+# CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER is not set
 # CONFIG_BOOTSPLASH is not set
 # end of Console display driver support
 
