[kernel] Support framebuffer set rotation

--- a/kernel/arch/arm/configs/wukongpi_defconfig
+++ b/kernel/arch/arm/configs/wukongpi_defconfig
@@ -158,3 +158,5 @@ CONFIG_STAGING=y
 CONFIG_FB_TFT=y
 CONFIG_FB_TFT_ST7789V=y
 CONFIG_FB_TFT_TINYLCD=y
+CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
+CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
