--- a/kernel/arch/arm/configs/wukongpi_defconfig
+++ b/kernel/arch/arm/configs/wukongpi_defconfig
@@ -160,3 +160,5 @@ CONFIG_FB_TFT_ST7789V=y
 CONFIG_FB_TFT_TINYLCD=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
+CONFIG_KEYBOARD_GPIO=y
+CONFIG_INPUT_GPIO_ROTARY_ENCODER=y
