--- a/kernel/arch/arm/configs/wukongpi_defconfig
+++ b/kernel/arch/arm/configs/wukongpi_defconfig
@@ -172,3 +172,4 @@ CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_SUN8I_THERMAL=y
+CONFIG_POSIX_MQUEUE=y
