[kernel] Add xr819 wifi driver

--- a/kernel/arch/arm/configs/wukongpi_defconfig
+++ b/kernel/arch/arm/configs/wukongpi_defconfig
@@ -31,7 +31,18 @@ CONFIG_IP_PNP_BOOTP=y
 # CONFIG_IPV6 is not set
 CONFIG_CAN=y
 CONFIG_CAN_SUN4I=y
-# CONFIG_WIRELESS is not set
+CONFIG_WIRELESS=y
+CONFIG_CFG80211=y
+CONFIG_CFG80211_REQUIRE_SIGNED_REGDB=y
+CONFIG_CFG80211_USE_KERNEL_REGDB_KEYS=y
+CONFIG_CFG80211_DEFAULT_PS=y
+CONFIG_CFG80211_CRDA_SUPPORT=y
+CONFIG_MAC80211=y
+CONFIG_MAC80211_HAS_RC=y
+CONFIG_MAC80211_RC_MINSTREL=y
+CONFIG_MAC80211_RC_DEFAULT_MINSTREL=y
+CONFIG_MAC80211_RC_DEFAULT="minstrel_ht"
+CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_DMA_CMA=y
@@ -56,7 +67,6 @@ CONFIG_SUN4I_EMAC=y
 CONFIG_STMMAC_ETH=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-# CONFIG_WLAN is not set
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_SUN4I_LRADC=y
 # CONFIG_INPUT_MOUSE is not set
@@ -173,3 +183,8 @@ CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_SUN8I_THERMAL=y
 CONFIG_POSIX_MQUEUE=y
+CONFIG_WLAN=y
+CONFIG_WLAN_VENDOR_XRADIO=m
+CONFIG_XRADIO_NON_POWER_OF_TWO_BLOCKSIZES=y
+CONFIG_XRADIO_USE_EXTENSIONS=y
+
