--- a/kernel/arch/arm/boot/dts/sun8i-h3-wukongpi.dts
+++ b/kernel/arch/arm/boot/dts/sun8i-h3-wukongpi.dts
@@ -54,6 +54,7 @@
 	aliases {
 		ethernet0 = &emac;
 		serial0 = &uart1;
+		ethernet1 = &xr819;
 	};
 
 	chosen {
@@ -129,6 +130,21 @@
 		gpios-states = <0x1>;
 		states = <1100000 0>, <1300000 1>;
 	};
+
+	reg_vcc_wifi: reg_vcc_wifi {
+		compatible = "regulator-fixed";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		regulator-name = "vcc-wifi";
+		enable-active-high;
+		gpio = <&pio 0 20 GPIO_ACTIVE_HIGH>;
+	};
+
+	wifi_pwrseq: wifi_pwrseq {
+		compatible = "mmc-pwrseq-simple";
+		reset-gpios = <&r_pio 0 7 GPIO_ACTIVE_LOW>;
+		post-power-on-delay-ms = <200>;
+	};
 };
 
 &cpu0 {
@@ -169,6 +185,22 @@
 	bus-width = <4>;
 	cd-gpios = <&pio 5 6 GPIO_ACTIVE_LOW>; /* PF6 */
 	status = "okay";
+};
+
+&mmc1 {
+	vmmc-supply = <&reg_vcc_wifi>;
+	mmc-pwrseq = <&wifi_pwrseq>;
+	bus-width = <4>;
+	non-removable;
+	status = "okay";
+
+	xr819: sdio_wifi@1 {
+		reg = <1>;
+		compatible = "xradio,xr819";
+		interrupt-parent = <&pio>;
+		interrupts = <6 10 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "host-wake";
+	};
 };
 
 &ohci0 {
