[kernel] Support kernel config check on board -> cat /proc/config.gz

--- a/kernel/arch/arm/configs/wukongpi_defconfig
+++ b/kernel/arch/arm/configs/wukongpi_defconfig
@@ -187,4 +187,5 @@ CONFIG_WLAN=y
 CONFIG_WLAN_VENDOR_XRADIO=m
 CONFIG_XRADIO_NON_POWER_OF_TWO_BLOCKSIZES=y
 CONFIG_XRADIO_USE_EXTENSIONS=y
-
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
