[rootfs]Modift key_event_service, use led status to show current tty

--- a/kernel/arch/arm/boot/dts/sun8i-h3-wukongpi.dts
+++ b/kernel/arch/arm/boot/dts/sun8i-h3-wukongpi.dts
@@ -78,8 +78,7 @@
 		pwr_led {
 			label = "green_led";
 			gpios = <&r_pio 0 10 GPIO_ACTIVE_HIGH>;
-			default-state = "on";
-			linux,default-trigger = "heartbeat";
+			default-state = "off";
 		};
 
 		status_led {
