--- a/kernel/arch/arm/configs/wukongpi_defconfig
+++ b/kernel/arch/arm/configs/wukongpi_defconfig
@@ -124,6 +124,7 @@ CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_SUNXI=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
+CONFIG_USB_STORAGE=y
 CONFIG_MMC=y
 CONFIG_MMC_SUNXI=y
 CONFIG_NEW_LEDS=y
